# llm_knowledge

./: CLAUDE.md  README.md  WIKI_SCHEMA.md  install_obsidian.sh
.claude/: domains.md  wiki_query.py
.claude/memory/: current.md  preferences.md
app/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: fs_cmds.rs  lib.rs  main.rs  ops.rs  search.rs  wiki.rs
app/src/components/: CommandPalette.tsx  Editor.tsx  FileTree.tsx  GraphView.tsx  Mermaid.tsx  OpsPanel.tsx  Preview.tsx  SaveFlourish.tsx  SearchPanel.tsx  Sidebar.tsx  TabBar.tsx  VaultMenu.tsx
app/src/lib/: api.ts  delight.ts  frontmatter.ts  markdown.tsx  wikilink.ts
app/src/state/: ops.ts  recent.ts  tabs.ts  theme.ts  vault.ts
app/src/styles/: app.css
docs/: index.html  script.js  style.css
raw/articles/: 2026-04-15-vibe-coding-guide.md
wiki/: index.md  log.md  overview.md
wiki/.obsidian/: workspace.json
wiki/concepts/: agentic-engineering.md  vibe-coding.md
wiki/entities/: andrej-karpathy.md
wiki/sources/: summary-vibe-coding-guide-2026.md
