[package]
name = "ideallm-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "ideallm_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
notify = "6"
walkdir = "2"
anyhow = "1"
regex = "1"
once_cell = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
